# energy-ros2-cpp-python

./: .gitignore  README.md  action_remain_runs.txt  clean-containers.sh  clean-standalone.sh  clean-volumes.sh  cpu-mem-client.csv  cpu-mem-server.csv  energy-client-675509.csv  energy-client-powerjoular.csv  energy-client-powerjoular.csv-2316066.csv  energy-client-powerjoular.csv-3634976.csv  energy-client-powerjoular.csv-3652653.csv  energy-client-powerjoular.csv-3747790.csv  energy-mon.py  energy-server-675511.csv  energy-server-powerjoular.csv  energy-server-powerjoular.csv-2316067.csv  energy-server-powerjoular.csv-3634975.csv  energy-server-powerjoular.csv-3652652.csv  energy-server-powerjoular.csv-3747769.csv  mon-rapl.py  pubsub_remain_runs.txt  requirements.txt  run-action-rr.sh  run-action-standalone.sh  run-action.sh  run-pubsub-er.sh  run-pubsub-standalone.sh  run-service-standalone.sh  run-service.sh  run.sh  runner.sh  service_remain_runs.txt  setup.bash  sonar-project.properties  sonarqube-scanner.sh  sonarqube.sh
.github/workflows/: sonar.yaml
data/: measurements.ods  resource-100_10.csv  resource-20_40.csv  resource-bkp-10_10.csv  resource-bkp.csv  resource-linear-cpp.csv  resource-linear-cpp1.csv  resource-linear-py.csv  resource-linear.csv  resource-pubsub-20_40.csv  resource-pubsub-cpp.csv  resource-pubsub-cpp1.csv  resource-pubsub-multi.csv  resource-pubsub-py.csv  resource-pubsub.csv  resource-teleop-20_40.csv  resource.csv  result-100_10.csv  result-20_40.csv  result-bkp-10_10.csv  result-bkp.csv  result-linear-3.csv  result-linear.csv  result-pubsub-20_40.csv  result-pubsub-cpp.csv  result-pubsub-multi_sub.csv  result-pubsub-py.csv  result-pubsub.csv  result-teleop-20_40.csv  result.csv  ros2_repos.csv  simple_pub_sub_py.csv
data-analysis/: concatenated_file.csv  gen_graphs-mac.py  gen_graphs.py  gen_mean_table.py  gen_mean_table_standalone.py  gen_overall_graphs.py  load_data.py  load_data_standalone.py  statistical_tests.py  statistical_tests_standalone.py
data-analysis/.ipynb_checkpoints/: pubsub-checkpoint.ipynb
data-analysis/pubsub/: client_barplot_cpu_pubsub.py  client_barplot_energy_pubsub.py  server_barplot_cpu_pubsub.py  server_barplot_energy_pubsub.py
data/analysis/: data-distribution-linear.ipynb  data-distribution-pubsub-cpp.ipynb  data-distribution.ipynb  data-pub_multi_sub-20_40.ipynb  data-pub_multi_sub.ipynb  data-pubsub-resource.ipynb  data-pubsub_multisub-20_40.ipynb  data-teleop_multisub-20_40.ipynb
docker/: Dockerfile  EXPERIMENTS.md  docker-compose.yml  dockerfile  sonarqube-scanner.yaml
docker/.scannerwork/: report-task.txt
exp-runners/: RunnerConfig.py  cpu.sh  progress-bar.sh  runner-linear-cpp.sh  runner-linear-py.sh  runner-pub-multisub-py.sh  runner-pubsub-cpp.sh  runner-pubsub-py.sh
exp-runners/old/: mem.sh  runner-pub-multisub-all.sh  runner-pub-multisub-cpp.sh  runner-pubsub-cpp.sh
exp_runners/: RunnerConfig-action.py  RunnerConfig-pubsub.py  RunnerConfig-pubsub0_1.py  RunnerConfig-pubsub_debug.py  RunnerConfig-service.py  RunnerConfig.py
exp_runners/drivers/: DockerRunner.py
exp_runners/profilers/: CPUMemProfiler.py  DockerCPUProfiler.py  ProcessResProfiler.py
scripts/: lloc.py
src/action_tutorials_cpp/: CMakeLists.txt  package.xml
src/action_tutorials_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
src/action_tutorials_py/: setup.py  (+2 more)
src/composable_node _cpp/: CMakeLists.txt  package.xml
src/composable_node _cpp/src/: comp_publisher_member_function.cpp
src/simple_service_client_cpp/: CMakeLists.txt  package.xml
src/simple_service_client_cpp/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/tf2_listener_cpp/: CMakeLists.txt  package.xml
src/tf2_listener_cpp/launch/: turtle_tf2_demo.launch.py
src/tf2_static_broadcaster_cpp/: CMakeLists.txt  package.xml
(+22642 files in other folders)
